--- a/README.Rmd
+++ b/README.Rmd
@@ -13,9 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# olympics
-
-# olympics <a href=‘https://numbats.github.io/olympics/’><img src=‘man/figures/logo/sticker.png’ align=“right” height=“138.5" /></a>
+# olympics <a href=‘https://numbats.github.io/olympics/’><img src=‘man/figures/logo.png’ align=“right” height=“138.5" /></a>
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/numbats/olympics/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/numbats/olympics/actions/workflows/R-CMD-check.yaml)
